data/derived/comb/progs/unify/prog6964.ml.out
Characters 45-46:
  let funt x = let xx = f f (f (f b)) in (xx, f b = b)
                          ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
